# glfw_glad_proj_template

./: CMakeLists.txt  README.md
foobar/: CMakeLists.txt
lib/: CMakeLists.txt
lib/impl/foobar/: foobar.cc
test/: CMakeLists.txt
